@@ -1,7 +1,11 @@
 ---------------------------------------------------------------------------------------------------
 Version: 3.3.0
 Date: ????
+  Features:
+    - Added visual search GUI, providing a more vanilla-like search interface
+      - This interface can only show items and fluids
   Changes:
+    - Fluid temperature variants are now sorted and placed adjacent to their base fluid in search results
     - Refactored all GUI code to improve modularity and significantly cleaned up the codebase
   Bugfixes:
     - Fixed "can mine" table header being unlocalised
